aoc/day03/objects/AoC03_Wire_Part__b/AoC03_Wire_Part__b.object-meta.xml
<CustomObject>
    <label>AoC03 Cell</label>
    <pluralLabel>AoC03Cells</pluralLabel>
</CustomObject>