aoc/day03/objects/AoC03_Wire_Part__b/fields/Advent_of_Code_Problem__c.field-meta.xml
<CustomField>
    <fullName>Advent_of_Code_Problem__c</fullName>
    <label>Advent of Code Problem</label>
    <referenceTo>Advent_of_Code_Problem__c</referenceTo>
    <relationshipLabel>AoC03 Parts</relationshipLabel>
    <relationshipName>AoC03_Parts</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>