aoc/day03/objects/AoC03_Wire_Part__b/fields/Wire__c.field-meta.xml
<CustomField>
    <fullName>Wire__c</fullName>
    <label>Wire</label>
    <length>2</length>
    <required>true</required>
    <type>Text</type>
</CustomField>