aoc/day03/objects/AoC03_Wire_Part__b/fields/x__c.field-meta.xml
<CustomField>
    <fullName>x__c</fullName>
    <label>x</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>