aoc/day03/objects/AoC03_Wire_Part__b/fields/x_y__c.field-meta.xml
<CustomField>
    <fullName>x_y__c</fullName>
    <label>x_y</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>