aoc/day03/objects/AoC03_Wire_Part__b/fields/y__c.field-meta.xml
<CustomField>
    <fullName>y__c</fullName>
    <label>y</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>